# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py
page_analyzer/templates/: base.html  index.html  show.html  urls.html
