[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = ["Semeikin_Kirill <semeikinkirill21@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = { version = "^3.11.6", python = "^3.11.6" }
flask = { version = "^3.0.0", python = "^3.11.6" }
gunicorn = { version = "^21.2.0", python = "^3.11.6" }
psycopg2-binary = { version = "^2.9.9", python = "^3.11.6" }
python-dotenv = { version = "^1.0.0", python = "^3.11.6" }
validators = { version = "^0.22.0", python = "^3.11.6" }
requests = { version = "^2.31.0", python = "^3.11.6" }
beautifulsoup4 = { version = "^4.12.2", python = "^3.11.6" }


[tool.poetry.group.dev.dependencies]
flake8 = { version = "^6.1.0", python = "^3.11.6" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
